--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/themes": "^3.2.1",
+    "antd": "^5.14.1",
+    "axios": "^1.6.7",
     "express": "^5.1.0",
     "mysql2": "^3.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^6.22.1",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
