--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ['nodejs', 'npm']
 
 [phases.install]
-cmds = ['npm ci', 'cd backend && npm ci']
+cmds = ['npm ci', 'cd backend && npm ci --include=dev']
 
 [phases.build]
 cmds = ['cd backend && npm run build']
