--- a/backend/package.json
+++ b/backend/package.json
@@ -27,8 +27,7 @@
     "express": "^4.18.2",
     "mysql2": "^3.14.1",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.22",
-    "typescript": "^5.3.3"
+    "typeorm": "^0.3.22"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -38,6 +37,7 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2"
   }
